--- a/nextgisweb/webmap/locale/ru.po
+++ b/nextgisweb/webmap/locale/ru.po
@@ -10,11 +10,11 @@ msgstr "Изображение"
 msgid "Main web map"
 msgstr "Основная веб-карта"
 
-#: model.py:33 model.py:52 view.py:366 view.py:407
+#: model.py:33 model.py:52 view.py:337 view.py:378
 msgid "Web map"
 msgstr "Веб-карта"
 
-#: model.py:35 view.py:371
+#: model.py:35 view.py:342
 msgid "Display"
 msgstr "Открыть"
 
@@ -34,25 +34,25 @@ msgstr "Администрировать аннотации"
 msgid "Web map settings"
 msgstr "Настройки веб-карты"
 
-#: view.py:298
+#: view.py:269
 msgid "Clone web map"
 msgstr "Клонировать веб-карту"
 
-#: view.py:310
+#: view.py:281
 msgid "Embedded webmap preview"
 msgstr "Просмотр встроенной веб-карты"
 
-#: view.py:332
-msgid "Settings_webmap_group"
-msgstr ""
+#: view.py:303
+msgid "Setting up a web map group"
+msgstr "Настройка группы веб карты"
 
-#: nodepkg/clone-webmap/CloneWebmap.js:180 view.py:377
+#: nodepkg/clone-webmap/CloneWebmap.js:180 view.py:348
 msgid "Clone"
 msgstr "Клонировать"
 
-#: view.py:383
-msgid "Settings_group"
-msgstr ""
+#: view.py:354
+msgid "Group setting"
+msgstr "Настройка группы"
 
 #: amd/ngw-webmap/Display.js:229 amd/ngw-webmap/Display.js:1140
 #: amd/ngw-webmap/ItemWidget.js:247
@@ -644,11 +644,15 @@ msgstr "Увеличить до всех слоев"
 
 #: nodepkg/layers-tree/DropdownActions.js:10
 msgid "Additional tools"
-msgstr ""
+msgstr "Дополнительные инструменты"
+
+#: nodepkg/layers-tree/DropdownFile.js:7
+msgid "Download attached files"
+msgstr "Скачать прикрепленные файлы"
 
 #: nodepkg/layers-tree/IconItem.js:25
 msgid "Zoom to feature layer"
-msgstr ""
+msgstr "Увеличить до объекта слоя"
 
 #: nodepkg/layers-tree/Legend.js:9
 msgid "Show legend"
