--- a/nextgisweb/webmap/locale/ru.po
+++ b/nextgisweb/webmap/locale/ru.po
@@ -959,3 +959,10 @@ msgstr "Настройка группы"
 #~ msgid "Map"
 #~ msgstr "Карта"
 
+#: amd/ngw-webmap/plugin/ZoomToLayer.js:25 nodepkg/layers-tree/IconItem.js:24
+msgid "Zoom to layer"
+msgstr "Увеличить до слоя"
+
+#: amd/ngw-webmap/plugin/SettingsStyle.js:20
+msgid "Style settings"
+msgstr "Настройки стиля"
