changing FilterByField component by date field and change style

--- a/nextgisweb/webmap/locale/ru.po
+++ b/nextgisweb/webmap/locale/ru.po
@@ -457,6 +457,14 @@ msgstr "Включите слой для получения информации
 msgid "Zoom to object(s)"
 msgstr "Увеличить до объекта(ов)"
 
+#: nodepkg/filter-by-field/FilterByField.tsx:46
+msgid "Add all layer objects"
+msgstr "Добавить все объекты слоя"
+
+#: nodepkg/filter-by-field/FilterByField.tsx:47
+msgid "Selected date range"
+msgstr "Выбранный диапазон дат"
+
 #: nodepkg/filter-by-field/FilterByField.tsx:47
 msgid "Data loaded"
 msgstr "Данные загружены"
