button translation, filtering, testing

--- a/nextgisweb/feature_layer/locale/ru.po
+++ b/nextgisweb/feature_layer/locale/ru.po
@@ -336,3 +336,6 @@ msgstr ""
 msgid "Features"
 msgstr "Объекты"
 
+#: nodepkg/feature-grid/FeatureTable.tsx:29
+msgid "Clear filter"
+msgstr "Очистить фильтр"
