Layer group control buttons in web map settings

--- a/nextgisweb/gui/locale/ru.po
+++ b/nextgisweb/gui/locale/ru.po
@@ -158,21 +158,37 @@ msgstr "Необходимо указать значение"
 msgid "The value entered is not valid"
 msgstr "Введенное значение некорректно"
 
-#: nodepkg/focus-table/ComplexTree.tsx:371
-msgid "Expanded"
-msgstr "Развернута"
+#: nodepkg/focus-table/ComplexTree.tsx:226
+msgid "Collapse"
+msgstr "Свернуть"
 
-#: nodepkg/focus-table/ComplexTree.tsx:371
-msgid "Collapsed"
-msgstr "Свернута"
+#: nodepkg/focus-table/ComplexTree.tsx:226
+msgid "Expand"
+msgstr "Развернуть"
 
-#: nodepkg/focus-table/ComplexTree.tsx:372
-msgid "Mutually exclusive"
-msgstr "Взаимоисключающая"
+#: nodepkg/focus-table/ComplexTree.tsx:227
+msgid "Turn off mutual exclusion"
+msgstr "Выключить взаимоисключение"
 
-#: nodepkg/focus-table/ComplexTree.tsx:372
-msgid "Not mutually exclusive"
-msgstr "Не взаимоисключающая"
+#: nodepkg/focus-table/ComplexTree.tsx:227
+msgid "Turn on mutual exclusion"
+msgstr "Включить взаимоисключение"
+
+#: nodepkg/focus-table/ComplexTree.tsx:236
+msgid "expanded"
+msgstr "развернута"
+
+#: nodepkg/focus-table/ComplexTree.tsx:236
+msgid "collapsed"
+msgstr "свернута"
+
+#: nodepkg/focus-table/ComplexTree.tsx:237
+msgid "mutually exclusive"
+msgstr "взаимоисключающая"
+
+#: nodepkg/focus-table/ComplexTree.tsx:237
+msgid "not mutually exclusive"
+msgstr "не взаимоисключающая"
 
 #: nodepkg/focus-table/FocusTable.tsx:24
 msgid "Hide details"
